# lexical_semantic_reasoning

./: .gitignore  CLAUDE.md  README.md  grpo_finetune.sbatch  pyproject.toml  run_infer.sh  run_train.sh
data/: mcl-wic.dev.json  mcl-wic.test.json  mcl-wic.train.json
src/: build_sft_dataset.py  call_api.py  debug_sense.py  eval_sense.py  filter_reasoning.py  finetune.py  gen_data.py  gen_reasoning_data.py  gen_sense_fit.py  grpo_finetune.py  grpo_lora.py  grpo_self_verify.py  grpo_sense.py  inference.py  prepare_data.py  sdpo_lora.py  sdpo_sense.py  sense_data.py  sense_rewards.py  seq2seq.py  sft_finetune.py  sft_lora.py  sft_sense.py  train_reward.py  utils.py  wic_task.py  wordnet_data.py
tests/: test_sense_rewards.py
