[project]
name = "generative-lexical-semantics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "datasets>=4.8.0",
    "tqdm>=4.5.0",
    "wandb>=0.23.1",
    "wn>=0.9",
    "rapidfuzz>=3.14.5",
    "accelerate>=1.4.0",
    "transformers>=4.56.2,<5",
    "torch>=2.10.0",
    "trl>=1.6.0",
    "liger-kernel>=0.7.0",
    #"vllm>=0.18.0",
    #"flashinfer-python>=0.6.6",
    "sentence-transformers>=5.6.0",
    "bert-score>=0.3.13",
    "scikit-learn>=1.5.0",
    "bitsandbytes>=0.49.2",
    "rich>=15.0.0",
    "torchvision>=0.25.0",
    "torchaudio>=2.11.0",
]

[tool.uv.sources]
# Pull torch (and friends) from the CUDA 12.6 wheel index instead of PyPI, so
# their CUDA builds stay ABI-compatible with each other.
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]
vllm = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
