[project]
name = "generative-lexical-semantics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "datasets>=4.8.0",
    "tqdm>=4.5.0",
    "wandb>=0.23.1",
    "rapidfuzz>=3.14.5",
    "accelerate>=1.4.0",
    "transformers>=5.14.0",
    "torch>=2.10.0",
    "trl[vllm]>=1.8.0",
    "peft>=0.18.0",
    "liger-kernel>=0.7.0",
    "scikit-learn>=1.5.0",
    "bitsandbytes>=0.49.2",
    "openai>=1.0.0",
    "sentence-transformers>=5.6.0",
    "kernels>=0.15.2,<0.16",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
# The training scripts import their siblings as top-level modules (``import
# sense_data``), so tests resolve them the same way.
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.sources]
# Pull torch (and friends) from the CUDA 12.6 wheel index instead of PyPI, so
# their CUDA builds stay ABI-compatible with each other.
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
vllm = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
